again on modularization fixed wrongly located classes